--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head> <meta charset="utf-8">
-  <title>Dane komputerowe Daniel Czerczon 1P gr.1</title>
+  <title>Dane komputerowe Daniel Czerczon 1P </title>
 <style>
  table {
     background: #CC7722;
@@ -14,7 +14,7 @@ background: white;
  </head>
  <body>
   <table>
-<caption><p><font color="black", face="Arial"> Częśći komputerowe – Daniel Czerczon 1P gr.1 </font></p></caption>
+<caption><p><font color="black", face="Arial"> Częśći komputerowe – Daniel Czerczon 1P </font></p></caption>
   <thead>
   <tr>
     <TD BGCOLOR="#000080" colspan="5"><font size="4" face="Arial"><p align="center"> Częśći komputerowe – Daniel Czerczon 1P </p></font></TD>
