--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@ background: white;
   </tr>
 </tbody>
  </table>
-<face="Verdana"><p align="left"><u><i>Źródło: Internet, podręcznik elektronowy</u></i></p></font>
+<face="Verdana"><p align="left"><u><i>Źródło: Internet, podręcznik elektronowy</u></i></p></face>
  </body>
 </html>
