--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <title>Dane komputerowe Daniel Czerczon 1P </title>
 <style>
  table {
-    background: #CC7722;
     width: 101%;
     color: black;
    }
@@ -22,11 +21,11 @@ background: white;
   </thead>
 <tbody>
   <tr>
-    <TD BGCOLOR="#000080"><p align="right"> Płyta </p></TD>
-    <TD BGCOLOR="#000080"><p align="right"> Pamięć RAM</p></td>
-    <TD BGCOLOR="#000080"><p align="right"> Karta graficzna</p></td>
-    <TD BGCOLOR="#000080"><p align="right"> Karta Sieciowa</p></td>
-    <TD BGCOLOR="#000080"><p align="right"> Zasilacz </p></td> 
+    <TD BGCOLOR="#4169E1"><p align="right"> Płyta </p></TD>
+    <TD BGCOLOR="#4169E1"><p align="right"> Pamięć RAM</p></td>
+    <TD BGCOLOR="#4169E1"><p align="right"> Karta graficzna</p></td>
+    <TD BGCOLOR="#4169E1"><p align="right"> Karta Sieciowa</p></td>
+    <TD BGCOLOR="#4169E1"><p align="right"> Zasilacz </p></td> 
   </tr>
   <tr>
     <TD BGCOLOR="#87CEEB"><p align="center"><font color="gold"> A520M </p></td> 			
