--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@ background: yellow;
   </thead>
 <tbody>
   <tr>
-    <TD BGCOLOR="#4169E1"><p align="right"> Płyta </p></TD>
-    <TD BGCOLOR="#4169E1"><p align="right"> Pamięć RAM</p></td>
-    <TD BGCOLOR="#4169E1"><p align="right"> Karta graficzna</p></td>
-    <TD BGCOLOR="#4169E1"><p align="right"> Karta Sieciowa</p></td>
-    <TD BGCOLOR="#4169E1"><p align="right"> Zasilacz </p></td> 
+    <TD BGCOLOR="#4169E1"><p align="center"> Płyta </p></TD>
+    <TD BGCOLOR="#4169E1"><p align="center"> Pamięć RAM</p></td>
+    <TD BGCOLOR="#4169E1"><p align="center"> Karta graficzna</p></td>
+    <TD BGCOLOR="#4169E1"><p align="center"> Karta Sieciowa</p></td>
+    <TD BGCOLOR="#4169E1"><p align="center"> Zasilacz </p></td> 
   </tr>
   <tr>
-    <TD BGCOLOR="#87CEEB"><p align="center"><font color="gold"> A520M </p></td> 			
-    <TD BGCOLOR="#87CEEB"><p align="center"><font color="red"> Ddr4</p></td>
-    <TD BGCOLOR="#87CEEB"><p align="center"><font color="green"> RTX 2080</p></td>
-    <TD BGCOLOR="#87CEEB"><p align="center"> Pce-ac68</p></td>
-    <TD BGCOLOR="#87CEEB"><p align="center"> A650gf 650w</p></td>
+    <TD BGCOLOR="#4169E1"><p align="right"><font color="gold"> A520M </p></td> 			
+    <TD BGCOLOR="#4169E1"><p align="right"><font color="red"> Ddr4</p></td>
+    <TD BGCOLOR="#4169E1"><p align="right"><font color="green"> RTX 2080</p></td>
+    <TD BGCOLOR="#4169E1"><p align="right"> Pce-ac68</p></td>
+    <TD BGCOLOR="#4169E1"><p align="right"> A650gf 650w</p></td>
   </tr>
   <tr>  
     <TD BGCOLOR="#87CEEB"><font color="gold"> H410M-D</td>	 		
