--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Dane komputerowe Daniel Czerczon 1P </title>
 <style>
  table {
+    background: #DAA520;
     width: 101%;
     color: black;
    }
