--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
  table {
     background: #DAA520;
-    width: 101%;
+    width: 150%;
     color: black;
    }
 th {
@@ -17,7 +17,7 @@ background: yellow;
 <caption><p><font color="black", face="Arial"> Częśći komputerowe – Daniel Czerczon 1P </font></p></caption>
   <thead>
   <tr>
-    <TD BGCOLOR="#000080" colspan="5"><font size="4" face="Arial"><p align="center"> Częśći komputerowe – Daniel Czerczon 1P </p></font></TD>
+    <TD BGCOLOR="#4169E1" colspan="5"><font size="4" face="Arial"><p align="center"> Częśći komputerowe – Daniel Czerczon 1P </p></font></TD>
   </tr>
   </thead>
 <tbody>
@@ -29,48 +29,49 @@ background: yellow;
     <TD BGCOLOR="#4169E1"><p align="center"> Zasilacz </p></td> 
   </tr>
   <tr>
-    <TD BGCOLOR="#4169E1"><p align="right"><font color="gold"> A520M </p></td> 			
-    <TD BGCOLOR="#4169E1"><p align="right"><font color="red"> Ddr4</p></td>
-    <TD BGCOLOR="#4169E1"><p align="right"><font color="green"> RTX 2080</p></td>
-    <TD BGCOLOR="#4169E1"><p align="right"> Pce-ac68</p></td>
-    <TD BGCOLOR="#4169E1"><p align="right"> A650gf 650w</p></td>
+    <TD BGCOLOR="#87CEEB"><p align="right"><font color="Aquamarine"> A520M </p></td> 			
+    <TD BGCOLOR="#87CEEB"><p align="right"><font color="DarkBlue"> Ddr4</p></td>
+    <TD BGCOLOR="##87CEEB"><p align="right"><font color="DarkRed"> RTX 2080</p></td>
+    <TD BGCOLOR="#87CEEB"><p align="right"> Pce-ac68</p></td>
+    <TD BGCOLOR="#87CEEB"><p align="right"> A650gf 650w</p></td>
   </tr>
   <tr>  
-    <TD BGCOLOR="#87CEEB"><font color="gold"> H410M-D</td>	 		
-    <TD BGCOLOR="#87CEEB"><font color="red"> Goodram</td>
-    <TD BGCOLOR="#87CEEB"><font color="green"> RTX 2070</td>
+    <TD BGCOLOR="#87CEEB"><font color="Aquamarine"> H410M-D</td>	 		
+    <TD BGCOLOR="#87CEEB"><font color="DarkBlue"> Goodram</td>
+    <TD BGCOLOR="#87CEEB"><font color="DarkRed"> RTX 2070</td>
     <TD BGCOLOR="#87CEEB"> t5e </td>
     <TD BGCOLOR="#87CEEB"> Vero I3 500w </td>
   </tr>
   <tr>
-    <TD BGCOLOR="#ADD8E6"><font color="gold"> X5705</td>			
-    <TD BGCOLOR="#ADD8E6"><font color="red"> Kingston fury</td>
-    <TD BGCOLOR="#ADD8E6"><font color="green"> RTX 2060</td>
+    <TD BGCOLOR="#ADD8E6"><font color="Aquamarine"> X5705</td>			
+    <TD BGCOLOR="#ADD8E6"><font color="DarkBlue"> Kingston fury</td>
+    <TD BGCOLOR="#ADD8E6"><font color="DarkRed"> RTX 2060</td>
     <TD BGCOLOR="#ADD8E6"> tx3000e</td>
     <TD BGCOLOR="#ADD8E6"> A650bn</td>
   </tr>
   <tr>
-    <td bgcolor="#800080"><font color="gold"> Z590M</td>			
-    <td bgcolor="#800080"><font color="red"> Pny xlr8</td>
-    <td bgcolor="#800080"><font color="green"> GTX 1660</td>
-    <td bgcolor="#800080"> Tg3468 </td>
-    <td bgcolor="#800080"> P1000gm 1000w </td>
+    <td bgcolor="#ADD8E6"><font color="Aquamarine"> Z590M</td>			
+    <td bgcolor="#ADD8E6"><font color="DarkBlue"> Pny xlr8</td>
+    <td bgcolor="#ADD8E6"><font color="DarkRed"> GTX 1660</td>
+    <td bgcolor="#ADD8E6"> Tg3468 </td>
+    <td bgcolor="#ADD8E6"> P1000gm 1000w </td>
   </tr>
   <tr>
-    <td bgcolor="#FFE4C4"><font color="gold"> B660M </td>
-    <td bgcolor="#FFE4C4"><font color="green"> Adata xpg</td>
-    <td bgcolor="#FFE4C4"><font color="red"> GTX 1550</td>
-    <td bgcolor="#FFE4C4"><font color="green"> Tl-wn781nd</td>
+    <td bgcolor="#FFE4C4"><font color="Aquamarine"> B660M </td>
+    <td bgcolor="#FFE4C4"><font color="DarkBlue"> Adata xpg</td>
+    <td bgcolor="#FFE4C4"><font color="DarkRed"> GTX 1550</td>
+    <td bgcolor="#FFE4C4"> Tl-wn781nd</td>
     <td bgcolor="#FFE4C4"> Gx1 500w</td>
   </tr>
   <tr> 
-    <td bgcolor="#FFE4C4"><font color="gold"> Z490</td>			
-    <td bgcolor="#FFE4C4"><font color="red"> oloy blade</td>
-    <td bgcolor="#FFE4C4"><font color="green"> GTX 1060</td>
+    <td bgcolor="#FFE4C4"><font color="Aquamarine"> Z490</td>			
+    <td bgcolor="#FFE4C4"><font color="DarkBlue"> oloy blade</td>
+    <td bgcolor="#FFE4C4"><font color="DarkRed"> GTX 1060</td>
     <td bgcolor="#FFE4C4"> Xg-c100c</td>
+    <td bgcolor="#FFE4C4"> Cx550f 550w</td>
   </tr>
   <tr>
-    <TD BGCOLOR="#7FFFD4" colspan="5"><font size="3"><p align="center"> Częśći komputerowe</u></i></p></font></TD>
+    <TD BGCOLOR="#90EE90" colspan="5"><font size="3"><p align="center"> Częśći komputerowe</u></i></p></font></TD>
   </tr>
 </tbody>
  </table>
