--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ background: yellow;
     <TD BGCOLOR="#4169E1"><p align="center"> Zasilacz </p></td> 
   </tr>
   <tr>
-    <TD BGCOLOR="#87CEEB"><p align="right"><font color="Aquamarine"> A520M </p></td> 			
-    <TD BGCOLOR="#87CEEB"><p align="right"><font color="DarkBlue"> Ddr4</p></td>
-    <TD BGCOLOR="##87CEEB"><p align="right"><font color="DarkRed"> RTX 2080</p></td>
-    <TD BGCOLOR="#87CEEB"><p align="right"> Pce-ac68</p></td>
-    <TD BGCOLOR="#87CEEB"><p align="right"> A650gf 650w</p></td>
+    <TD BGCOLOR="#87CEEB"><font color="Aquamarine"> A520M </p></td> 			
+    <TD BGCOLOR="#87CEEB"><font color="DarkBlue"> Ddr4</p></td>
+    <TD BGCOLOR="#87CEEB"><font color="DarkRed"> RTX 2080</p></td>
+    <TD BGCOLOR="#87CEEB"> Pce-ac68</p></td>
+    <TD BGCOLOR="#87CEEB"> A650gf 650w</p></td>
   </tr>
   <tr>  
     <TD BGCOLOR="#87CEEB"><font color="Aquamarine"> H410M-D</td>	 		
@@ -75,6 +75,6 @@ background: yellow;
   </tr>
 </tbody>
  </table>
-<face="Verdana"><p align="left"><u><i>Źródło: Internet, podręcznik elektronowy</u></i></p></face>
+<face="Verdana"><p align="left">Źródło: Internet, podręcznik elektronowy</p></face>
  </body>
 </html>
