--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head> <meta charset="utf-8">
   <title>Dane komputerowe Daniel Czerczon 1P </title>
 <style>
- table {
+ <table> {
     background: #DAA520;
     width: 150%;
     color: black;
