--- a/index.html
+++ b/index.html
@@ -75,5 +75,12 @@ background: yellow;
 </tbody>
  </table>
 <face="Verdana"><p align="left">Źródło: Internet, podręcznik elektronowy</p></face>
+
+
+<center><h1> Formularz o ankiecie do olimpiady językowej</h1></center>
+<form enctype="text/plain" action="mailto:mkryniew@wp.pl" subject="formularz_dane" method="Post">
+  <tr>
+   <TD width="100">
+    <b>1.Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
  </body>
 </html>
