--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@ background: yellow;
 <form enctype="text/plain" action="mailto:mkryniew@wp.pl" subject="formularz_dane" method="Post">
   <tr>
    <TD width="100">
-    <b>1.Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
+    <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
+    <b>2. Adres gmail</b> <input name="@gmail.com" size="22">
+    <b>3. Adres zamieszkiwania</b> <input name="Adres zamieszkiwania" size="22">
+    <b>4 Numer Telefonu (maks. 9 cyfr)</b> <input name="4 Numer Telefonu (maks. 9 cyfr)" size="22">
  </body>
 </html>
