--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head> <meta charset="utf-8">
   <title>Dane komputerowe Daniel Czerczon 1P </title>
 <style>
- <table> {
+ table {
     background: #DAA520;
     width: 150%;
     color: black;
@@ -84,8 +84,11 @@ background: yellow;
   <tr>
    <TD width="100">
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
+    <br><br>
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">
+    <br><br>
     <b>3. Adres zamieszkiwania</b> <input name="Adres zamieszkiwania" size="22">
+    <br><br>
     <b>4 Numer Telefonu (maks. 9 cyfr)</b> <input name="4 Numer Telefonu (maks. 9 cyfr)" size="22">
  </body>
 </html>
