--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
  <head> <meta charset="utf-8">
   <title>Dane komputerowe Daniel Czerczon 1P </title>
 <style>
- table {
+ <table> 
+ {
     background: #DAA520;
-    width: 150%;
+    width: 120%;
     color: black;
    }
 th {
@@ -90,5 +91,16 @@ background: yellow;
     <b>3. Adres zamieszkiwania</b> <input name="Adres zamieszkiwania" size="22">
     <br><br>
     <b>4 Numer Telefonu (maks. 9 cyfr)</b> <input name="4 Numer Telefonu (maks. 9 cyfr)" size="22">
+    <br><br>
+    <TD width="100">Jaki język dobrze znasz?
+    <br><br>
+    <input type="checkbox" name="język" value="k"> Angielski
+    <br><br>
+    <input type="checkbox" name="język" value="m"> Niemiecki
+    <br><br>
+    <input type="checkbox" name="język" value="m"> Chiński
+    <br><br>
+    <input type="checkbox" name="język" value="inna"> INNE
+    <br><br><br>
  </body>
 </html>
