--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ background: yellow;
     <br><br>
     <b>4 Numer Telefonu (maks. 9 cyfr)</b> <input name="4 Numer Telefonu (maks. 9 cyfr)" size="22">
     <br><br>
-    <TD width="100">Jaki język dobrze znasz?
+    <TD width="100">5.Jaki język dobrze znasz?
     <br><br>
     <input type="checkbox" name="język" value="k"> Angielski
     <br><br>
@@ -101,6 +101,20 @@ background: yellow;
     <input type="checkbox" name="język" value="m"> Chiński
     <br><br>
     <input type="checkbox" name="język" value="inna"> INNE
+    <br><br><br>
+    <TD width="100">6. Ile lat uczysz ten język?
+    <br><br>
+    <input type="checkbox" name="Liczba" value="1"> 1 rok
+    <br><br>
+    <input type="checkbox" name="Liczba" value="2"> 2 lata
+    <br><br>
+    <input type="checkbox" name="Liczba" value="3"> 3 lata
+    <br><br>
+    <input type="checkbox" name="Liczba" value="4"> 4 lata
+     <br><br>
+    <input type="checkbox" name="Liczba" value="5"> 5 lat
+    <br><br>
+     <input type="checkbox" name="Liczba" value="inne"> więcej niż wymienione
     <br><br><br>
  </body>
 </html>
