--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
  <head> <meta charset="utf-8">
   <title>Dane komputerowe Daniel Czerczon 1P </title>
 <style>
- <table> 
+ table
  {
     background: #DAA520;
-    width: 100%;
+    width: 150%;
     color: black;
    }
 th {
