--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@ background: yellow;
     <br><br>
      <input type="checkbox" name="Liczba" value="inne"> więcej niż wymienione
     <br><br><br>
-     <nobr>Napisz dodatkowe informacje<br> o sobie (Maks. 150)<br>znaków</nobr>
+     <nobr>7. Napisz dodatkowe informacje<br> o sobie (Maks. 150)<br>znaków</nobr>
      <br><br>
-     <input name="inna" size="25" maxlength="150">
+     <input name="inna" size="75" maxlength="150">
      </TD>
      </TR>
-     <TR height="100">
+     <TR height="200">
  </body>
 </html>
