--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ background: yellow;
     <br><br><br>
      <nobr>7. Napisz dodatkowe informacje<br> o sobie (Maks. 150)<br>znaków</nobr>
      <br><br>
-     <input name="inna" size="75" maxlength="150">
+     <input name="komentarz" cols="50" rows="10" size="65" maxlength="150">
      </TD>
      </TR>
      <TR height="200">
