--- a/index.html
+++ b/index.html
@@ -86,6 +86,18 @@ background: yellow;
    <TD width="100">
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
     <br><br>
+    <TD width="300" > 
+<center><font size="5" color="red"><b>Podaj środek lokomacji dojazdu do 
+pracy</b></font></center><br>
+ <center> <select>
+ <option value="autobus">Autobus</option>
+ <option value="motocykl">Motocykl</option>
+ <option value="prom">Prom</option>
+ <option value="samolot">Samolot</option>
+ <option value="lodz">Łódź podwodna</option>
+ <option value="kajak">Kajak</option>
+ </select> </center>
+ </TD>
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">                                                                    
     <br><br>
     <b>3. Adres zamieszkiwania</b> <input name="Adres zamieszkiwania" size="22">
@@ -104,17 +116,17 @@ background: yellow;
     <br><br><br>
     <TD width="100">6. Ile lat uczysz ten język?
     <br><br>
-    <input type="checkbox" name="Liczba" value="1"> 1 rok
+    <input type="radio" name="Liczba" value="1"> 1 rok
     <br><br>
-    <input type="checkbox" name="Liczba" value="2"> 2 lata
+    <input type="radio" name="Liczba" value="2"> 2 lata
     <br><br>
-    <input type="checkbox" name="Liczba" value="3"> 3 lata
+    <input type="radio" name="Liczba" value="3"> 3 lata
     <br><br>
-    <input type="checkbox" name="Liczba" value="4"> 4 lata
+    <input type="radio" name="Liczba" value="4"> 4 lata
      <br><br>
-    <input type="checkbox" name="Liczba" value="5"> 5 lat
+    <input type="radio" name="Liczba" value="5"> 5 lat
     <br><br>
-     <input type="checkbox" name="Liczba" value="inne"> więcej niż wymienione
+     <input type="radio" name="Liczba" value="inne"> więcej niż wymienione
     <br><br><br>
      <nobr>7. Napisz dodatkowe informacje<br> o sobie (Maks. 150)<br>znaków</nobr>
      <br><br>
