--- a/index.html
+++ b/index.html
@@ -85,18 +85,17 @@ background: yellow;
   <tr>
    <TD width="100">
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
-    <br><br>
     <TD width="300" > 
-<center><font size="5" color="red"><b>Podaj środek lokomacji dojazdu do 
-pracy</b></font></center><br>
- <center> <select>
+<right><font size="5" color="red"><b>Podaj środek lokomacji dojazdu do 
+pracy</b></font></right><br>
+ <right> <select>
  <option value="autobus">Autobus</option>
  <option value="motocykl">Motocykl</option>
  <option value="prom">Prom</option>
  <option value="samolot">Samolot</option>
  <option value="lodz">Łódź podwodna</option>
  <option value="kajak">Kajak</option>
- </select> </center>
+ </select> </right>
  </TD>
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">                                                                    
     <br><br>
