--- a/index.html
+++ b/index.html
@@ -87,15 +87,16 @@ background: yellow;
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
     <br><br>
     <TD width="300" > 
-<right><font size="5" color="red"><b>Podaj środek lokomacji dojazdu do 
-pracy</b></font></right><br>
+<right><font size="5"><b> Województwo </b></font></right><br>
  <right> <select>
- <option value="autobus">Autobus</option>
- <option value="motocykl">Motocykl</option>
- <option value="prom">Prom</option>
- <option value="samolot">Samolot</option>
- <option value="lodz">Łódź podwodna</option>
- <option value="kajak">Kajak</option>
+ <option value="Pomorski">Pomorskie</option>
+  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
+ <option value="Kujawsko Pomorskie">Kujawsko Pomorskie</option>
+ <option value="Świetokrzyskie"> Swiętokrzyskie</option>
+ <option value="Sląskie"> Sląskie </option>
+ <option value="Małopolskie"> Małopolskie </option>
+ <option value="Mazowieckie"> Mazowieckie </option>
+ <option value="Wielkopolskie"> Wielkopolskie </option>
  </select> </right>
  </TD>
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">                                                                    
