--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@ background: yellow;
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
     <br><br>
     <TD width="300"> 
-<right><font size="5"><b> Województwo </b></font></right><br>
- <right> <select>
+<center><font size="5"><b>8. Województwo </b></font></center>
+ <center> <select>
  <option value="Pomorski">Pomorskie</option>
-  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
+ <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
  <option value="Kujawsko Pomorskie">Kujawsko Pomorskie</option>
  <option value="Świetokrzyskie"> Swiętokrzyskie</option>
  <option value="Sląskie"> Sląskie </option>
  <option value="Małopolskie"> Małopolskie </option>
  <option value="Mazowieckie"> Mazowieckie </option>
  <option value="Wielkopolskie"> Wielkopolskie </option>
- </select> </right>
+ </select> </center>
  </TD>
     <br><br><br>
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">                                                                    
