--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ background: yellow;
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
     <br><br>
     <TD width="300"> 
-<center><font size="5"><b>8. Województwo </b></font></center>
+<center><font size="5"><b>8. Województwo</b></font></center><br>
  <center> <select>
  <option value="Pomorski">Pomorskie</option>
  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
