--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@ background: yellow;
    <TD width="100">
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
     <br><br>
-    <TD width="300"> 
-<right><font size="5"><b>8. Województwo</b></font></right><br>
- <right> <select>
+    <TD width="100"> 
+<align=right font size="5"><b>8. Województwo</b></font></align><br>
+ <align=right> <select>
  <option value="Pomorski">Pomorskie</option>
  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
  <option value="Kujawsko Pomorskie">Kujawsko Pomorskie</option>
@@ -97,7 +97,7 @@ background: yellow;
  <option value="Małopolskie"> Małopolskie </option>
  <option value="Mazowieckie"> Mazowieckie </option>
  <option value="Wielkopolskie"> Wielkopolskie </option>
- </select> </right>
+ </select> </align>
  </TD>
     <br><br><br>
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">                                                                    
