--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ background: yellow;
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
     <br><br>
     <TD width="100"> 
-<align=right font size="5"><b>8. Województwo</b></font></align><br>
- <align=right> <select>
+<align=left font size="5"><b>8. Województwo</b></font></align><br>
+ <align=left> <select>
  <option value="Pomorski">Pomorskie</option>
  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
  <option value="Kujawsko Pomorskie">Kujawsko Pomorskie</option>
