--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ background: yellow;
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
     <br><br>
     <TD width="100"> 
-<align=left font size="5"><b>8. Województwo</b></font></align><br>
- <align=left> <select>
+<right><font size="5"><b>8. Województwo</b></font></right><br>
+ <right> <select>
  <option value="Pomorski">Pomorskie</option>
  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
  <option value="Kujawsko Pomorskie">Kujawsko Pomorskie</option>
@@ -97,7 +97,7 @@ background: yellow;
  <option value="Małopolskie"> Małopolskie </option>
  <option value="Mazowieckie"> Mazowieckie </option>
  <option value="Wielkopolskie"> Wielkopolskie </option>
- </select> </align>
+ </select> </right>
  </TD>
     <br><br><br>
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">                                                                    
