--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
 th {
 background: yellow;
 }
+ województwo{
+ województwo > span
+ margin-right: 2vw;
+ font-size 2vw
+ font-weight: bond;
+ }
+ 
 </style>
  </head>
  <body>
+  <div class="wojewodztwo" ><span>8. województwo</span></div>
   <table>
   <thead>
   <tr>
