--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
    }
 th {
 background: yellow;
-}
- województwo{
- województwo > span
- margin-right: 2vw;
- font-size 2vw
- font-weight: bond;
- }
  
 </style>
  </head>
@@ -96,7 +89,7 @@ background: yellow;
     <br><br>
     <TD width="100"> 
 <right><font size="5"><b>8. Województwo</b></font></right><br>
- <right> <select>
+ <right><select>
  <option value="Pomorski">Pomorskie</option>
  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
  <option value="Kujawsko Pomorskie">Kujawsko Pomorskie</option>
@@ -144,5 +137,12 @@ background: yellow;
      </TD>
      </TR>
      <TR height="200">
+      <br><br><br>
+ <input type="submit" value="Wyślij formularz">
+<input type="reset" value="Wyczyść dane">
+</div></form>
+<button type="button"><a href="tabela_czerczon.html"> tabela </A></button><br><br>
+<button type="submit"><a href="index.html"> wróć </A></button>
+<br><br>
  </body>
 </html>
