--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title><center><h1> Formularz o ankiecie do olimpiady językowej</h1></center></title>
+<title>Formularz o ankiecie do olimpiady językowej</title>
 <form enctype="text/plain" action="mailto:mkryniew@wp.pl" subject="formularz_dane" method="Post">
   <br>
    <TD width="100">
