--- a/tabela_czerczon.html
+++ b/tabela_czerczon.html
@@ -77,5 +77,9 @@ background: yellow;
 </tbody>
  </table>
 <face="Verdana"><p align="left">Źródło: Internet, podręcznik elektronowy</p></face>
+<input type="submit" value="Wyślij formularz">
+</div></form>
+<button type="button"><a href="tabela_czerczon.html"> tabela </A></button><br><br>
+<button type="submit"><a href="index.html"> wróć </A></button>
  </body>
 </html>
