--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     font-size: 2vw;
     font-weight: bold;
   }
+  </style>
 <form enctype="text/plain" action="mailto:mkryniew@wp.pl" subject="formularz_dane" method="Post">
   <br>
    <TD width="100">
