--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <br><br>
     <TD width="100"> 
       
- <div class="wojewodztwo"><span> 8.wojewodztwo</span>
+ <div class="wojewodztwo"><span><br><br> 8.wojewodztwo</span>
  <select>
  <option value="Pomorski">Pomorskie</option>
  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
