--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <b>1. Imię i nazwisko</b> <input name="imie i nazwisko" size="22">
     <br><br>
     <TD width="100"> 
-      
- <div class="wojewodztwo"><span> 8.wojewodztwo</span><br><br>
+ <div class="wojewodztwo"><span> 8.wojewodztwo</span><span> 9. Miasta </span><br><br>
  <select>
  <option value="Pomorski">Pomorskie</option>
  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
@@ -33,10 +32,10 @@
  <option value="Mazowieckie"> Mazowieckie </option>
  <option value="Wielkopolskie"> Wielkopolskie </option>
  </select> </div>
- </TD>
+ </TD> 
     <br><br><br>
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">                                                                    
-    <br><br>
+    <br><br>   
     <b>3. Adres zamieszkiwania</b> <input name="Adres zamieszkiwania" size="22">
     <br><br>
     <b>4 Numer Telefonu (maks. 9 cyfr)</b> <input name="4 Numer Telefonu (maks. 9 cyfr)" size="22">
