--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
  <option value="Małopolskie"> Małopolskie </option>
  <option value="Mazowieckie"> Mazowieckie </option>
  <option value="Wielkopolskie"> Wielkopolskie </option>
+ </select><br><br>
+ <select>
+ <option value="Pomorski"> Gdańsk</option>
+ <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
+ <option value="Kujawsko Pomorskie">Kujawsko Pomorskie</option>
+ <option value="Świetokrzyskie"> Swiętokrzyskie</option>
+ <option value="Sląskie"> Sląskie </option>
+ <option value="Małopolskie"> Małopolskie </option>
+ <option value="Mazowieckie"> Mazowieckie </option>
+ <option value="Wielkopolskie"> Wielkopolskie </option>
  </select> </div>
  </TD> 
     <br><br><br>
