--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <option value="Małopolskie"> Małopolskie </option>
  <option value="Mazowieckie"> Mazowieckie </option>
  <option value="Wielkopolskie"> Wielkopolskie </option>
- </select><br><br>
+ </select>
  <select>
  <option value="Pomorski"> Gdańsk</option>
  <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
