--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     <b>2. Adres gmail</b> <input name="@gmail.com" size="22">                                                                    
     <br><br>   
     <b>3. Adres zamieszkiwania</b> <input name="Adres zamieszkiwania" size="22">
+    <br><br><br>
+      <TD width="100">10. Czy wy chodziliście do jakichś innych olimpiad związanych z językami?
     <br><br>
+    <input type="radio" name="Tak" value="k"> Tak
+    <input type="radio" name="Nie" value="k"> Nie
+        <br><br>
     <b>4 Numer Telefonu (maks. 9 cyfr)</b> <input name="4 Numer Telefonu (maks. 9 cyfr)" size="22">
     <br><br>
     <TD width="100">5.Jaki język dobrze znasz?
