--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
  <option value="Sląskie"> Sląskie </option>
  <option value="Małopolskie"> Małopolskie </option>
  <option value="Mazowieckie"> Mazowieckie </option>
- <option value="Wielkopolskie"> Wielkopolskie </option>
+ <option value="Inne"> Inne </option>
  </select>
  <select>
- <option value="Pomorski"> Gdańsk</option>
- <option value="Zachodnio Pomorskie">Zachodnio Pomorskie</option>
- <option value="Kujawsko Pomorskie">Kujawsko Pomorskie</option>
- <option value="Świetokrzyskie"> Swiętokrzyskie</option>
- <option value="Sląskie"> Sląskie </option>
- <option value="Małopolskie"> Małopolskie </option>
- <option value="Mazowieckie"> Mazowieckie </option>
- <option value="Wielkopolskie"> Wielkopolskie </option>
+ <option value="gdańsk"> Gdańsk</option>
+ <option value="Szczecin">Szczecin</option>
+ <option value="Wrocław">Wrocław</option>
+ <option value="Kraków">Kraków</option>
+ <option value="Sląsk"> Sląsk </option>
+ <option value="Olsztyn">Olsztyn </option>
+ <option value="Kielce">Kielce </option>
+ <option value="Inne">Inne </option>
  </select> </div>
  </TD> 
     <br><br><br>
