--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
  <input type="submit" value="Wyślij formularz">
 <input type="reset" value="Wyczyść dane">
 </div></form>
-<button type="button"><a href="tabela_czerczon.html"> tabela </A></button><br><br>
+<a href="tabela_czerczon.html"><button type="button"> tabela </button></a><br><br>
 <button type="submit"><a href="index.html"> wróć </A></button>
 <br><br>
 </body>
