--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <input type="reset" value="Wyczyść dane">
 </div></form>
 <a href="tabela_czerczon.html"><button type="button"> tabela </button></a><br><br>
-<button type="submit"><a href="index.html"> wróć </A></button>
+<a href="index.html"><button type="submit"> wróć </button></a>
 <br><br>
 </body>
 </html>
